Api terminado
